@@ -27,8 +27,9 @@ dependencies {
 	implementation 'org.codehaus.groovy:groovy:3.0.24'
 	implementation 'org.codehaus.groovy:groovy-jsr223:3.0.24'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.19.0'
-	implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.1'
-	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-javafx:1.8.1"
+	implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3'
+	implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-debug:1.7.3'
+	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-javafx:1.7.3"
 	implementation 'org.yaml:snakeyaml:2.2'
 }
 
@@ -80,3 +81,8 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
 		jvmTarget = "21" // или 17 — под вашу Java
 	}
 }
+
+applicationDefaultJvmArgs = [
+		"--add-opens=kotlinx.coroutines.core/kotlinx.coroutines.debug.internal=ALL-UNNAMED",
+		"-Dkotlinx.coroutines.debug=on"
+]
